# spacegen

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json
.claude/skills/data-contract-blender-engine/: SKILL.md
.claude/skills/layer-stack-architecture-spacegen/: SKILL.md
.claude/skills/parameter-graph-spacegen/: SKILL.md
engine/: .gitignore  CMakeLists.txt  imgui.ini  main.cpp  metal_cpp_impl.cpp  platform_metal_glfw.h  platform_metal_glfw.mm  tinygltf_impl.cpp
engine/backends/metal/: MetalRenderer.cpp  MetalRenderer.h
engine/backends/metal/shaders/: structure_flat.metal
engine/core/: AmbientLightLayer.cpp  AmbientLightLayer.h  BeamLayer.cpp  BeamLayer.h  DirectionalLightLayer.cpp  DirectionalLightLayer.h  LFO.h  Layer.cpp  Layer.h  LayerFactory.h  MeshDecimate.cpp  MeshDecimate.h  ModulatorBank.h  Scene.cpp  Scene.h  ScenePreset.h  StructureLayer.cpp  StructureLayer.h  SyphonInputLayer.h  SyphonInputLayer.mm  UvAtlas.cpp  UvAtlas.h  UvAtlasGeogram.cpp  UvAtlasGeogram.h  UvOptimize.cpp  UvOptimize.h
engine/effects/area_light/: AreaLightLayer.cpp  AreaLightLayer.h
engine/effects/bloom/: BloomEffect.cpp  bloom.metal.inc
engine/effects/hologram/: HologramMaterialLayer.cpp  HologramMaterialLayer.h
engine/effects/light_cloner/: LightClonerLayer.cpp  LightClonerLayer.h
engine/effects/mesh_deformation/: MeshDeformationLayer.cpp  MeshDeformationLayer.h
engine/effects/mesh_fracture/: MeshFractureLayer.cpp  MeshFractureLayer.h  fracture.metal.inc
engine/effects/motion_blur/: MotionBlurEffect.cpp  motion_blur.metal.inc
engine/effects/post_fx/: ChromaticAberrationEffect.cpp  ChromaticAberrationEffect.h  GlitchEffect.cpp  GlitchEffect.h
engine/effects/procedural_material/: ProceduralMaterialLayer.cpp  ProceduralMaterialLayer.h
engine/effects/sdf_particles/: SDFParticleLayer.cpp  SDFParticleLayer.h  particles.metal.inc  particles.metal.inc.literal
engine/effects/volumetric_beams/: VolumetricBeamLayer.cpp  VolumetricBeamLayer.h
engine/gui/: Workstation.h  Workstation.mm
engine/next_tasks/: README.md
engine/next_tasks/effects/area_light/: AreaLightLayer.cpp  INTEGRATION.md  README.md  shader_snippet.metal.inc
engine/next_tasks/effects/bloom/: BloomEffect.h  INTEGRATION.md  README.md
engine/next_tasks/effects/hologram/: HologramMaterialLayer.h  INTEGRATION.md  README.md  hologram.metal.inc
engine/next_tasks/effects/light_cloner/: INTEGRATION.md  LightClonerLayer.cpp  LightClonerLayer.h  README.md
engine/next_tasks/effects/mesh_deformation/: INTEGRATION.md  README.md  deformers.metal.inc
engine/next_tasks/effects/mesh_fracture/: INTEGRATION.md  MeshFractureLayer.cpp  README.md
engine/next_tasks/effects/motion_blur/: INTEGRATION.md  MotionBlurEffect.h  README.md
engine/next_tasks/effects/post_fx/: ChromaticAberrationEffect.h  INTEGRATION.md  README.md  ca.metal.inc  glitch.metal.inc
engine/next_tasks/effects/procedural_material/: INTEGRATION.md  README.md  patterns.metal.inc
engine/next_tasks/effects/sdf_particles/: INTEGRATION.md  README.md  SDFParticleLayer.cpp  SDFParticleLayer.h  particles.metal.inc
engine/next_tasks/effects/volumetric_beams/: INTEGRATION.md  README.md  volumetric.metal.inc
engine/next_tasks/tier_2_stretch_heatmap/: INTEGRATION.md  README.md  StretchHeatmap.metal.inc  panel_toggle.snippet.mm
engine/next_tasks/tier_3_spacegen_optimize/: INTEGRATION.md  README.md  UvOptimize.cpp  UvOptimize.h
engine/next_tasks/tier_4_geogram_swap/: README.md
engine/shaders/common/: fullscreen.vert  noise.glsl
engine/shaders/layers/: plasma.frag
engine/src/: main.cpp
engine/src/core/: BPMClock.cpp  BPMClock.h  LayerManager.cpp  LayerManager.h  MasterFX.h  RenderTarget.cpp  RenderTarget.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h  gl.h
engine/src/gui/: GUI.cpp  GUI.h
engine/src/layers/: ILayer.h  PlasmaWaveLayer.h  ShaderLayer.cpp  ShaderLayer.h
engineering/: DECISIONS.md  STATUS.md
research/: ENGINEERING_BRIEF.md  MORNING_BRIEF.md  REPORT.md
src/main/: main.js
src/renderer/: BPMClock.js  LayerManager.js  MaskSequence.js  app.js  index.html
src/renderer/shaders/: ChaserShader.js  ChromaGlitchShader.js  DomainWarpShader.js  GeometryShader.js  KaleidoscopeShader.js  ParticleShader.js  PlasmaWaveShader.js  SaberShader.js  StarFieldShader.js  VoronoiShader.js
tools/blender_export/: README.md  __init__.py
